--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ trigger commands when not even at start of message
 // TODO //
 character limit
 command.deprecated
+IRC.lang.{color,plural,quantity}
 make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
 bundle webpack assets statically
