--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ PYTHON=$(which python2)
 message regex
 add extra input for events to subscribe to event: "message.channel"
 collect all events and run them in a single vm
+use a whole vm for events?
 make events more powerful, restrict how they're created -> current event API is bad
 s/thing/thing hooks ~event.message (disable errors?) - fetchURL / memo / remind
 trigger commands when not even at start of message
