just force sim to go?

--- a/TODO
+++ b/TODO
@@ -76,6 +76,7 @@ https://chanstat.net/stats/rizon/%23homescreen
 https://sourceforge.net/p/pisg/code/ci/master/tree/pisg/modules/Pisg/Parser/Logfile.pm#l582
 https://github.com/miknight/pisg/blob/615758a8611c832b1cf730061f965362d95f415f/lang.txt
 kick / death ratio
+topics
 
 join part vs activity
 
@@ -84,7 +85,6 @@ activity: do a multiline chart with hover over messages
 user stats
 URL linkers
 richest
-21:03 <+Kirjava> this is all great
 21:03 <eyeoh> what about pisg
 21:03 <eyeoh> http://pisg.sourceforge.net/examples
 21:04 <+nibblrjr> >> pisg - Perl IRC Statistics Generator :: Examples
