--- a/TODO
+++ b/TODO
@@ -40,6 +40,7 @@ https://www.youtube.com/get_video_info?video_id=dQw4w9WgXcQ
 ~7s - ~7 is a card
 
 // TODO //
+poker2: monthly reset
 secretly log pms
 force chart spread based on number of nodes
 add sudo commands to docs, talk about modules
