--- a/TODO
+++ b/TODO
@@ -21,6 +21,9 @@ timeout abstraction for responding cutely to messages
 SQL scoped to command, not server
 poker2
 botcoin
+onjoin, onconnect
+14:07 <+cake^> I should make CuteServ autoreply with the colour of a hex value
+CuteServ: question?
 
 ## = ignore everything
 make events more powerful, restrict how they're created -> current event API is bad
@@ -39,8 +42,12 @@ new store for events
 https://www.youtube.com/get_video_info?video_id=dQw4w9WgXcQ
 
 ~7s - ~7 is a card
+~pokemon [name] (have team, start at 0 ELO)
+
+require('jsdom|lodash|date-fns') + 'Downloading from npm'
 
 // TODO //
+add help prop in commands for generic help
 poker2: monthly reset
 secretly log pms
 force chart spread based on number of nodes
@@ -60,7 +67,6 @@ command rate limiting
 IRC.requestLines
 FormData URLSearchParams { form }
 arcsecond command parser
-require('jsdom|lodash|date-fns') + 'Downloading from npm'
 <kingchris> pls to make stock trading game. everybody starts with a budget of £1000 and choose stonks to invest into. use real stonk data for scoring. limit buying and selling to weekly idk? ok thank cool, good talk (2 hours ago)
 koth game (you have HP to share around? - damnit bobby)
 make reserved/silent configurable
