removed webpack entirely

--- a/TODO
+++ b/TODO
@@ -1,15 +1,16 @@
 sudo: reboot|update|join|part|mode|topic|kick|nick|msg|redirect|ignore|setlinelimit
 repl: rs|clojure|vlang|cj|scheme|jsx|html
 
-    // jsdom
-    // ~jsx
-    // ~babel
-    // ~terser await minify
-    // ~regexgen
+// modules repair;
+// jsdom
+// ~jsx
+// ~babel
+// ~terser await minify
+// ~regexgen
 
-        // e.message = e.message
-        //     .replace(new RegExp(path.resolve(__dirname + '/../..'), 'g'), '')
-        //     .replace(/(\n|\r).*/g, '');
+// e.message = e.message
+//     .replace(new RegExp(path.resolve(__dirname + '/../..'), 'g'), '')
+//     .replace(/(\n|\r).*/g, '');
 
 esbuild frontend
 dart-sass
