--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 sudo: reboot|update|join|part|mode|topic|kick|nick|msg|redirect|ignore|setlinelimit
 repl: rs|clojure|vlang|cj|scheme|jsx|html
 
+// long running events vm
+
 // modules repair;
 // jsdom
 // ~jsx
