--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@ sudo: reboot|update|join|part|mode|topic|kick|nick|msg|redirect|ignore|setlineli
 repl: rs|clojure|vlang|cj|scheme|jsx|html
 
 // long running events vm
+// logging to DB
+// SQL database
 
 // modules repair;
 // jsdom
