--- a/TODO
+++ b/TODO
@@ -15,14 +15,13 @@ IRC.sudo().node.parent.reloadEvents();
 const dateFns = require('date-fns@1.30.1');
 const _ = require('lodash');
 update config to explain getChannel
+IRC.queryConfig
 
     // make preventable
     // TODO: onPrint / prevent Default
-    // node.getPrintConfig
     //
     // tick|message|print|command|eval|join|part|nick|webhook ? rate nick
 
-config rewrite
 IBIP / fetchURL
 IRC.sudo().getStore('namespace')
 
