--- a/TODO
+++ b/TODO
@@ -16,6 +16,10 @@ const dateFns = require('date-fns@1.30.1');
 const _ = require('lodash');
 update config to explain getChannel
 IRC.queryConfig
+IBIP example
+update help
+webpack to esbuild
+
 
     // make preventable
     // TODO: onPrint / prevent Default
@@ -23,7 +27,12 @@ IRC.queryConfig
     // tick|message|print|command|eval|join|part|nick|webhook ? rate nick
 
 IBIP / fetchURL
+    // TODO: remove lodash / html-entities from deps
 IRC.sudo().getStore('namespace')
+
+update list in web ui
+
+clear Queue
 
 sudo disable / enable events
 IRC.sudo().node.parent.reloadVM();
