--- a/TODO
+++ b/TODO
@@ -12,8 +12,9 @@ IRC.listen filter showError
 syntax errors
 clean up TODO
 removal of dateFns and _
+IRC.sudo().node.events.reloadVM.call();
 IRC.sudo().node.parent.reloadEvents.call();
-IRC.sudo().node.parent.reloadVM();
+IRC.sudo().node.parent.reloadVM.call();
 const dateFns = require('date-fns@1.30.1');
 const _ = require('lodash');
 removed channels and commandLimit
@@ -26,6 +27,7 @@ fewer deps
 ignoreEvents
 curl -u io:password https://nibblr.pw/api/iostream
 update ~help
+rm -rm cache/acquire
 
 // ~update to reload web
 
@@ -36,7 +38,10 @@ fetchURL
 https://api.github.com/repos/kirjavascript/mdcomp-wasm
 https://stackoverflow.com/questions/695438/what-are-the-safe-characters-for-making-urls
 stars, language
-    // add normal fetch
+
+    add normal fetch
+
+    fetch limits
 
     // fetchSync()
     // print(fetchSync(urls[0]));
