--- a/TODO
+++ b/TODO
@@ -29,8 +29,7 @@ curl -u io:password https://nibblr.pw/api/iostream
 update ~help
 rm -rm cache/acquire
 use a better password
-
-    // issues when reloading
+fetch
 
     // tick|message|print|command|eval|join|part|nick|webhook|acquire ? rate nick
 
